--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 sudo: required
-
 language: cpp
-
 services:
   - docker
 
@@ -11,7 +9,7 @@ env:
     - server_type: travis
     - ros_release_name: kinetic
     - ubuntu_version_name: xenial
-    - used_modules: check_cache,check_build,code_style_check,check_deb_make,codecov_tool
+    - used_modules: check_cache, check_build, software_tests, code_style_check, check_deb_make, codecov_tool
     - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
 script:
