--- a/package.xml
+++ b/package.xml
@@ -86,4 +86,9 @@
     <!-- Other tools can request additional information be placed here -->
 
   </export>
+
+<!--   <run_depend>turtlebot_gazebo</run_depend>
+  <run_depend>turtlebot_navigation</run_depend>
+  <run_depend>octomap</run_depend>
+ -->
 </package>
